<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">General Quiz App</string>
    <string name="content_description">General Knowledge Quiz App</string>
    <string name="app_intro">Challenge yourself to get the best score!</string>
    <string name="name_hint">Put your name here</string>
    <string name="start_button">Start!</string>
    <string name="welcome_user">Welcome</string>
    <string name="name_warning">Name cannot be empty!</string>
    <string name="question1">1) India was....</string>
    <string name="answer1A">A Dutch colony</string>
    <string name="answer2A">An English colony</string>
    <string name="answer3A">A Spanish colony</string>
    <string name="question2">2) When was created the European Community?</string>
    <string name="answer1B">In 1957</string>
    <string name="answer2B">In 2000</string>
    <string name="answer3B">In 1947</string>
    <string name="question3">3) Who invented the World Wide Web?</string>
    <string name="answer1C">Vinton Cerf and Robert Kahn</string>
    <string name="answer2C">Tim Berners-Lee and Robert Cailliau</string>
    <string name="answer3C">Michael Bertouzous</string>
    <string name="question4">4) What is the capital of Canada?</string>
    <string name="answer_hint">Type the answer here</string>
    <string name="question5">5) What type of animals are mammals?</string>
    <string name="answerBox1">Pigeons</string>
    <string name="answerBox2">Spiny anteaters</string>
    <string name="answerBox3">Chickens</string>
    <string name="answerBox4">Whales</string>
    <string name="question6">6) Google\'s Browser is called Google</string>
    <string name="sendButton">Send</string>
    <string name="numberOfQuestions">/6</string>
    <string name="score_success">Congratulations</string>
    <string name="score_failure">Unfortunately you got a low score!</string>
    <string name="score_label">Your final score is:</string>
    <string name="restart_app">Restart</string>
    <string name="exit_app">Exit</string>
</resources>
